# functor

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  INSPIRATION.md  LICENSE  README.md  cliff.toml  functor.sln  golden-scenarios.json  install.ps1  install.sh  package-lock.json  package.json  playwright.config.mjs  test.fs  wrangler.jsonc
cli/: Cargo.toml
cli/src/: main.rs  output.rs
cli/src/commands/: build.rs  develop.rs  docs.rs  functor_lang_project.rs  import.rs  init.rs  inspect.rs  mle_project.rs  mod.rs  run.rs
cli/src/output/: live.rs
cli/src/util/: asset_verify.rs  bundle.rs  mod.rs  native_export.rs  paths.rs  shell_command.rs  wasm_dev_server.rs  wasm_export.rs
cli/templates/: functor.json
cli/templates/3d/: game.fun
cli/templates/fps/: game.fun  game.mle
docs/: mle.md  (+14 more)
examples/: Cargo.toml
examples/Pong/: Pong.fable-temp.csproj  Pong.fs  Pong.fsproj
examples/Pong/build-native/: Cargo.toml
examples/Pong/build-wasm/: Cargo.toml
examples/animation/: assets.fun  game.fun
examples/asteroids/: .gitignore  ASSETS.md  assets.fun  font.fun  game.fun  lib.fun
examples/atmosphere/: .gitignore  game.fun  game.mle
examples/counter/: game.fun
examples/crossfade/: animator.fun  assets.fun  game.fun
examples/glove/: assets.fun  game.fun  vr_glove_model.glb
examples/hello/: .gitignore  assets.fun  game.fun  game.mle  hello.fs  hello.fsproj
examples/hello-cubes/: game.fun  game.functor  game.mle  pieces.fun  pieces.functor  pieces.mle
examples/inspector/: game.fun
examples/lighting/: .gitignore  assets.fun  game.fun  game.mle  lighting.fs  lighting.fsproj
examples/loading/: functor.json  game.fun
examples/lobby/: client.fun  functor.json  gameserver.fun  master.fun  protocol.fun  view.fun
examples/mario/: ASSETS.md  assets.fun  game.fun  game.mle  jump.script
examples/mle-atmosphere/: game.mle
examples/mle-hello/: game.mle
examples/mle-hello-gltf/: game.mle
examples/mle-lighting/: game.mle
examples/mle-monitor/: game.mle
examples/mle-mpclient/: game.mle
examples/mle-mpserver/: game.mle
examples/mle-netdemo/: game.mle
examples/mle-physics/: functor.json  game.mle
examples/mle-primitives/: game.mle
examples/mle-spike/: game.mle
examples/mle-synthwave/: game.mle
examples/mle-wsdemo/: game.mle
examples/mle-wsserverdemo/: functor.json  game.mle
examples/monitor/: game.fun  game.functor  game.mle
examples/mp/: client.fun  functor.json  protocol.fun  server.fun  view.fun
examples/mpclient/: .gitignore  game.fun  game.mle  mpclient.fs  mpclient.fsproj
examples/mpserver/: game.fun  game.mle  mpserver.fs  mpserver.fsproj
examples/netdemo/: game.fun  game.mle  netdemo.fs  netdemo.fsproj
examples/physics/: game.fun  game.functor  game.mle
examples/primitives/: .gitignore  game.fun  game.mle  primitives.fs  primitives.fsproj
examples/replay/: scene.json
examples/synthwave/: .gitignore  functor.json  game.fun  game.mle  synthwave.fs  synthwave.fsproj
examples/terrain/: game.fun  generate-heightmap.mjs
examples/toss/: game.fun
examples/trajectory/: game.fun
examples/ui/: game.fun
examples/webview/: game.fun
examples/webview-animated/: game.fun
examples/wsdemo/: game.fun  game.functor  game.mle  wsdemo.fs  wsdemo.fsproj
examples/wsserverdemo/: game.fun  game.mle  wsserverdemo.fs  wsserverdemo.fsproj
examples/xr-controllers/: game.fun  grab.script
functor-lang/: Cargo.toml
functor-lang/benches/: README.md
functor-lang/examples/: functions.ir  lists.fun  lists.ir  lists.run  pure_pipeline.ast  pure_pipeline.functor  pure_pipeline.ir  pure_pipeline.trace  records.ast  records.functor  records.ir  records.run  shapes.ast  shapes.functor  shapes.ir  shapes.run  strings.ast  strings.ir  tuples.ast  tuples.fun  tuples.ir  tuples.run
functor-lang/src/: ast.rs  bench.rs  complete.rs  coverage.rs  docs.rs  eval.rs  goto.rs  hover.rs  ir.rs  lexer.rs  lib.rs  lower.rs  main.rs  parser.rs  project.rs  rebind.rs  span.rs  trace.rs  types.rs  value.rs
functor-lang/stdlib/: option.fun  result.fun
functor-lang/tests/: check.rs  expects.rs  ir.rs  parser.rs  project.rs  rebind.rs  recorder.rs  run.rs
functor-prelude/: Cargo.toml
functor-prelude/prelude/: angle.functori  angle.funi  angle.mlei  anim.funi  asset.funi  attr.funi  audio_scene.functori  audio_scene.funi  audio_scene.mlei  audio_source.functori  audio_source.funi  audio_source.mlei  camera.functori  camera.funi  camera.mlei  camera2d.funi  color.funi  effect.functori  effect.funi  effect.mlei  fog.functori  fog.funi  fog.mlei  frame.functori  frame.funi  frame.mlei  html.funi  input.funi  light.functori  light.funi  light.mlei  physics.functori  physics.funi  physics.mlei  render_target.functori  render_target.funi  render_target.mlei  scene.functori  scene.funi  scene.mlei  (+19 more)
functor-prelude/src/: lib.rs
functor-prelude/stdlib/: animator.fun
mle/: Cargo.toml
mle/benches/: README.md
mle/examples/: functions.ast  functions.ir  functions.mle  lists.ast  lists.ir  lists.mle  pure-pipeline.ast  pure-pipeline.ir  pure-pipeline.mle  pure-pipeline.run  pure_pipeline.ast  pure_pipeline.ir  pure_pipeline.trace  records.ast  records.ir  records.mle  records.run  shapes.ast  shapes.ir  shapes.mle  strings.ast  strings.ir  strings.mle  strings.run  tuples.ast  tuples.ir  tuples.mle
mle/src/: ast.rs  bench.rs  codelens.rs  eval.rs  goto.rs  hover.rs  inlay.rs  ir.rs  lexer.rs  lib.rs  lower.rs  main.rs  parser.rs  project.rs  rebind.rs  trace.rs  types.rs  value.rs
mle/tests/: check.rs  ir.rs  parser.rs  project.rs  rebind.rs  run.rs
runtime/functor-netsim/: Cargo.toml
runtime/functor-runtime-common/: Cargo.toml
runtime/functor-runtime-desktop/: Cargo.toml
runtime/functor-runtime-oculus/: Cargo.toml  README.md
runtime/functor-runtime-web/: Cargo.toml  index-functor-lang.html  index-mle.html  index.html  pkg  scrubber.js  timeline-model.js  timeline-model.test.js
tools/functor-docgen/: Cargo.toml
tools/functor-lang-lsp/: Cargo.toml
tools/functor-lang-wasm/: Cargo.toml
tools/mle-lsp/: Cargo.toml
(+414 files in other folders)
