[workspace]
resolver = "1"

members = [
    "cli",
    "functor-prelude",
    "functor-lang",
    "runtime/functor-netsim",
    "runtime/functor-runtime-common",
    "runtime/functor-runtime-desktop",
    "runtime/functor-runtime-web",
    "tools/functor-docgen",
    "tools/functor-lang-lsp",
    "tools/functor-lang-wasm",
]

# Debug info dominated target/ size (it was repeatedly filling the disk during
# development). Our own crates emit line-tables-only debug info (`debug = 1`) —
# enough for file/line backtraces, without the bulky full `.debug_info` — while
# third-party deps drop it entirely. The per-package opt-level overrides below
# still apply and inherit `debug = false` from the wildcard.
[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = false

# Image decoding runs in the asset pipeline at game load; unoptimized it is
# 10-100x slower, which makes texture-heavy models (e.g. a 47MB fish.glb)
# appear to never load in debug builds of functor-runner. Optimize just the
# decoder crates so dev builds stay fast to compile but assets load quickly.
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.image-webp]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.zune-core]
opt-level = 3
[profile.dev.package.zune-inflate]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.adler2]
opt-level = 3
