[package]
name = "functor-cli"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "functor"
path = "src/main.rs"

[dependencies]
# The MLE language, for `language: "mle"` projects (docs/mle.md Track C4).
mle = { path = "../mle" }
clap = { version = "4.5.6", features = ["derive"] }
colored = "2.1.0"
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
functor_runtime_common = { path = "../runtime/functor-runtime-common" }
# The desktop runtime (GLFW/OpenGL). `functor run native` drives its run loop
# in-process — post-E3 there is a single `functor` binary, always with GL.
functor-runtime-desktop = { path = "../runtime/functor-runtime-desktop" }
