[package]
name = "functor-cli"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "functor"
path = "src/main.rs"

[dependencies]
# The MLE language, for `language: "mle"` projects (docs/mle.md Track C4).
mle = { path = "../mle" }
clap = { version = "4.5.6", features = ["derive"] }
colored = "2.1.0"
# The `log` facade: the CLI installs a logger that turns any `log!` (its own or
# the in-process runtime's) into a region-aware `Event::Log` (cli/src/output.rs).
log = "0.4"
# The ink-style live region: spinners + a sticky telemetry panel above
# scrollback, on an interactive TTY only (see cli/src/output/live.rs).
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
functor_runtime_common = { path = "../runtime/functor-runtime-common" }
# The desktop runtime (GLFW/OpenGL). `functor run native` drives its run loop
# in-process — post-E3 there is a single `functor` binary, always with GL.
functor-runtime-desktop = { path = "../runtime/functor-runtime-desktop" }
