[package]
name = "functor-cli"
version = "0.0.0-dev"
edition = "2021"


[[bin]]
name = "functor"
path = "src/main.rs"

[features]
# `web` embeds the WebGL2 runtime bundle (`include_bytes!`) for `run wasm`, so it
# requires `npm run build:cli` first. ON by default; disable it
# (`--no-default-features`) for a FAST native + typecheck build that needs no
# wasm bundle — `run wasm` then errors with a rebuild hint.
default = ["web"]
web = []

[dependencies]
# The Functor Lang language, for `language: "functor-lang"` projects (docs/functor-lang.md Track C4).
functor-lang = { path = "../functor-lang" }
# The host prelude `.funi` interfaces — injected at load time so a game's
# `Scene.*` calls typecheck against real types (docs/functor-lang-interfaces.md).
functor-prelude = { path = "../functor-prelude" }
clap = { version = "4.5.6", features = ["derive"] }
colored = "2.1.0"
# The `log` facade: the CLI installs a logger that turns any `log!` (its own or
# the in-process runtime's) into a region-aware `Event::Log` (cli/src/output.rs).
log = "0.4"
# The ink-style live region: spinners + a sticky telemetry panel above
# scrollback, on an interactive TTY only (see cli/src/output/live.rs).
indicatif = "0.17"
# Blocking HTTP for `functor import`'s sidecar-declared remote assets (run on
# a dedicated thread — the CLI's tokio context can't host a blocking client).
# Same version/TLS as the desktop runtime's async reqwest, so cargo unifies.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
functor_runtime_common = { path = "../runtime/functor-runtime-common" }
# The desktop runtime (GLFW/OpenGL). `functor run native` drives its run loop
# in-process — post-E3 there is a single `functor` binary, always with GL.
functor-runtime-desktop = { path = "../runtime/functor-runtime-desktop" }
