[package]
name = "functor-prelude"
version = "0.1.0"
edition = "2021"

# This crate owns the engine's complete Functor Lang bundle: host `.funi`
# interfaces plus reusable `.fun` implementations. It depends only on the
# dependency-free language crate for the shared bundled-module descriptor.
[dependencies]
functor-lang = { path = "../functor-lang" }
