[package]
name = "mle"
version = "0.1.0"
edition = "2021"

# Zero dependencies by design (docs/mle.md Track B): the lexer/parser are
# hand-rolled so the language crate stays trivially portable (native + wasm)
# and free of parser-generator toolchains.
[dependencies]

[[bin]]
name = "mle"
path = "src/main.rs"
