[package]
name = "functor-netsim"
version = "0.1.0"
edition = "2021"

[dependencies]
functor_runtime_common = { path = "./../functor-runtime-common" }
serde_json = "1.0"

# The desktop runtime provides the `FunctorLangGame` producer the mp/sim tests drive as
# their instances (E3 phase 0b). It is a DEV-dependency only: the library itself
# dispatches over `Box<dyn GameProducer>` and never names a Functor Lang game, so this
# dev-only edge — the desktop lib normal-depends on this crate for its
# `functor-netsim-viz` bin — is an allowed dev-dependency cycle, not a real one.
[dev-dependencies]
functor-runtime-desktop = { path = "./../functor-runtime-desktop" }
image = "0.25"
