[package]
name = "functor_runtime_common"
version = "0.1.0"
edition = "2021"

[features]
# Treat warnings as a buld error
strict = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
glow = "0.17"
# In-game text/UI overlay. egui is the immediate-mode backend living entirely in
# this shell; `egui_glow` paints through the same glow::Context the runtime owns.
# `default-features = false` drops egui_glow's winit/clipboard glue we don't use;
# egui keeps its default bundled font (default_fonts) so text actually renders.
egui = "0.34"
egui_glow = { version = "0.34", default-features = false }
image = "0.25.1"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fable_library_rust = { path = "./../../fable_modules/fable-library-rust" }
futures = "0.3.30"
async-trait = "0.1.80"
gltf = { version = "1.4.1", features = ["names", "KHR_materials_pbrSpecularGlossiness"] }

# Pin the transitive `uuid` (from fable_library_rust) below 1.12, which is the first
# version to require `getrandom 0.3+` and an explicit RNG backend for
# wasm32-unknown-unknown (otherwise `wasm-pack build` fails with "could not find RngImp").
# We don't use uuid directly; this only constrains version resolution.
uuid = { version = ">=1.8, <1.12", default-features = false, features = ["v4"] }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
tokio = { version = "1", features = ["full"] }

# Conditionally include dependencies for the WebAssembly target
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = ['Blob', 'HtmlCanvasElement', 'WebGl2RenderingContext', 'console', 'Window', 'Performance', 'PerformanceTiming', 'Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Document', 'Element']
