[package]
name = "functor_runtime_common"
version = "0.1.0"
edition = "2021"

[features]
# Treat warnings as a buld error
strict = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
glow = "0.17"
# The Functor Lang language (parser/IR/interpreter). This crate provides the Functor
# prelude — the functor-lang::Host giving Functor Lang programs Scene3D/Camera/Frame builtins
# (docs/functor-lang.md Track C1) — shared by both shells.
functor-lang = { path = "../../functor-lang" }
# In-game text/UI overlay. egui is the immediate-mode backend living entirely in
# this shell; `egui_glow` paints through the same glow::Context the runtime owns.
# `default-features = false` drops egui_glow's winit/clipboard glue we don't use;
# egui keeps its default bundled font (default_fonts) so text actually renders.
egui = "0.34"
egui_glow = { version = "0.34", default-features = false }
image = "0.25.1"
once_cell = "1.19.0"
# Rigid-body physics (docs/physics.md). Default features only — NO
# `enhanced-determinism` (we need local single-binary determinism, which rapier
# gives by default; the flag trades SIMD/parallel for cross-platform determinism
# we don't need) — plus `serde-serialize` for byte-exact world snapshots
# (rewind/replay/netcode Timeline) and `debug-render` for the collider
# wireframe overlay (`--debug-render physics`; render-only, no sim impact).
rapier3d = { version = "0.33", features = ["serde-serialize", "debug-render"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# sha256 of each loaded `.fun` file's text — the paused-inspector wire
# contract's `sources` hash the LSP gates its live-value overlay on
# (visual-debugger PR2/2b). Shared by both shells' producers.
sha2 = "0.10"
futures = "0.3.30"
async-trait = "0.1.80"
# The `log` facade for free-form runtime diagnostics (e.g. asset-load debug
# lines). The shell installs the logger; here we only emit through `log::*!`.
log = "0.4"
gltf = { version = "1.4.1", features = ["names", "KHR_materials_pbrSpecularGlossiness"] }
# The engine's `.fun` implementation modules and host `.funi` interfaces. The
# embedded producer links pushed sources against the complete bundle, while
# drift tests keep the interface signatures in sync with the host registry.
functor-prelude = { path = "../../functor-prelude" }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
tokio = { version = "1", features = ["full"] }

# Conditionally include dependencies for the WebAssembly target
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = ['Blob', 'HtmlCanvasElement', 'WebGl2RenderingContext', 'console', 'Window', 'Performance', 'PerformanceTiming', 'Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Document', 'Element']
