[package]
name = "functor-runtime-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "functor-runner"
path = "src/main.rs"

[dependencies]
functor_runtime_common = { path = "./../functor-runtime-common" }
fable_library_rust = { path = "./../../fable_modules/fable-library-rust" }
glow = "0.13.1"
cgmath = "0.18.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tempfile = "3.10.1"
clap = { version = "4.5.6", features = ["derive"] }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glfw = { version = "0.56.0" }
libloading = "0.8.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }

[profile.release]
codegen-units = 1
lto = true
