[package]
name = "functor-runtime-desktop"
version = "0.1.0"
edition = "2021"

[features]
# Treat warnings as a buld error
strict = ["functor_runtime_common/strict"]

[[bin]]
name = "functor-runner"
path = "src/main.rs"

# A live multi-pane viewer for the netsim: renders each game instance's view in
# its own pane while stepping the simulation. Native-only (needs GL + dylib load).
[[bin]]
name = "functor-netsim-viz"
path = "src/bin/netsim_viz.rs"
required-features = []

[dependencies]
functor_runtime_common = { path = "./../functor-runtime-common" }
fable_library_rust = { path = "./../../fable_modules/fable-library-rust" }
glow = "0.17"
cgmath = "0.18.0"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tempfile = "3.10.1"
clap = { version = "4.5.6", features = ["derive"] }
async-trait = "0.1.80"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
functor-netsim = { path = "./../functor-netsim" }
glfw = { version = "0.56.0" }
libloading = "0.8.3"
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Audio playback (the host owns the device so it survives hot reload). cpal needs
# ALSA dev headers on Linux (libasound2-dev) — installed in the Build Native CI.
rodio = { version = "0.19", default-features = false, features = ["symphonia-wav", "symphonia-vorbis"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dev-dependencies]
libloading = "0.8.3"
functor_runtime_common = { path = "./../functor-runtime-common" }
fable_library_rust = { path = "./../../fable_modules/fable-library-rust" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }

[profile.release]
codegen-units = 1
lto = true
