[package]
name = "functor-runtime-desktop"
version = "0.1.0"
edition = "2021"

[features]
# Treat warnings as a buld error
strict = ["functor_runtime_common/strict"]

# A live multi-pane viewer for the netsim: renders each game instance's view in
# its own pane while stepping the simulation. Native-only (needs GL + dylib load).
[[bin]]
name = "functor-netsim-viz"
path = "src/bin/netsim_viz.rs"
required-features = []

[dependencies]
# The Functor Lang language, for the --functor-lang producer (docs/functor-lang.md Track C2).
functor-lang = { path = "../../functor-lang" }
# The host prelude `.funi` interfaces — injected at load time so a game's
# `Scene.*` calls typecheck against real types (docs/functor-lang-interfaces.md).
functor-prelude = { path = "../../functor-prelude" }
functor_runtime_common = { path = "./../functor-runtime-common" }
glow = "0.17"
cgmath = "0.18.0"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tempfile = "3.10.1"
clap = { version = "4.5.6", features = ["derive"] }
async-trait = "0.1.80"
# The `log` facade for free-form runtime diagnostics (routed region-aware by the
# CLI's logger). Structured events still go through `functor_runtime_common::events`.
log = "0.4"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
functor-netsim = { path = "./../functor-netsim" }
glfw = { version = "0.56.0" }
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Audio playback (the host owns the device so it survives hot reload). cpal needs
# ALSA dev headers on Linux (libasound2-dev) — installed in the Build Native CI.
rodio = { version = "0.19", default-features = false, features = ["symphonia-wav", "symphonia-vorbis"] }
# rodio's `symphonia-vorbis` enables only the vorbis CODEC — without the OGG
# container demuxer every .ogg fails with "Unrecognized format". rodio 0.19
# exposes no feature for it, so enable symphonia's `ogg` directly (feature
# unification turns it on inside rodio's decoder).
symphonia = { version = "0.5", default-features = false, features = ["ogg"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dev-dependencies]
functor_runtime_common = { path = "./../functor-runtime-common" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }

[profile.release]
codegen-units = 1
lto = true
