[package]
name = "functor-docgen"
version = "0.1.0"
edition = "2021"

[dependencies]
functor-lang = { path = "../../functor-lang" }
functor-prelude = { path = "../../functor-prelude" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "functor-docgen"
path = "src/main.rs"
