[package]
name = "functor-lang-wasm"
version = "0.1.0"
edition = "2021"

# The in-browser language intelligence for the sandbox editor: the same
# functor-lang analysis the LSP runs (diagnostics + inlay hints + code lenses +
# hover), compiled to a small wasm module the editor imports directly. It is
# SEPARATE from the engine wasm (functor-runtime-web): the editor lives in the
# parent page, the engine in an iframe, so this stays a few hundred KB.
[lib]
# `cdylib` for the wasm-pack bundle, `rlib` so `cargo test` runs the pure
# `*_json` functions natively (no wasm toolchain needed).
crate-type = ["cdylib", "rlib"]

[dependencies]
# functor-lang stays zero-dep; the wasm glue lives here, not in it.
functor-lang = { path = "../../functor-lang" }
functor-prelude = { path = "../../functor-prelude" }
wasm-bindgen = "0.2"
serde_json = "1"
