[package]
name = "mle-lsp"
version = "0.1.0"
edition = "2021"

# Deliberately tiny (docs/mle.md Track D): a blocking stdio loop needs no
# async runtime or LSP framework — serde_json (already in the tree) is the
# only dependency besides the language crate itself.
[dependencies]
mle = { path = "../../mle" }
serde_json = "1.0"

[[bin]]
name = "mle-lsp"
path = "src/main.rs"
