[package]
name = "pong_wasm"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "pong_wasm"
path = "../Pong.rs"
crate-type = ["cdylib"]

[dependencies]
functor-lib = { path = "./../../../src" }
functor_runtime_common = { path = "./../../../runtime/functor-runtime-common" }
fable_library_rust = { path = "./../../../fable_modules/fable-library-rust" }
wasm-bindgen = { version = "0.2" }