[package]
name = "game_native"
version = "0.1.0"
edition = "2021"

[build]
target-dir = "../target"

[workspace]

[lib]
name = "game_native"
path = "../Hello.rs"
crate-type = ["dylib"]

[dependencies]
functor-lib = { path = "./../../../src" }
functor_runtime_common = { path = "./../../../runtime/functor-runtime-common" }
fable_library_rust = { path = "./../../../fable_modules/fable-library-rust" }