[package]
name = "game_native"
version = "0.1.0"
edition = "2021"

[build]
target-dir = "../target"

[workspace]

[lib]
name = "game_native"
path = "../primitives.rs"
crate-type = ["dylib"]

[dependencies]
functor-lib = { path = "./../../../src" }
functor_runtime_common = { path = "./../../../runtime/functor-runtime-common" }
fable_library_rust = { path = "./../../../fable_modules/fable-library-rust" }

# Enable high optimizations for dependencies (to avoid linker errors)
# See:
# https://github.com/bevyengine/bevy/issues/1110
# https://github.com/erezsh/hexx/commit/45773dd471f352a5a424e274048d17da96a9e116
# Our own game crate: line-tables-only debug info (`debug = 1`) keeps the
# dylib small while preserving backtraces; deps drop debug info entirely below.
[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 3
# Deps don't need debug info, and it dominates target/ size.
debug = false

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
